test/tests/operators/to_splunk_validation/s2s_fields_raw.txt
error: `fields` is not supported with `raw`
 --> tests/operators/to_splunk_validation/s2s_fields_raw.tql:8:18
  |
8 |           fields={foo: "bar"}
  |                  ^^^^^^^^^^^^ 
  ⋮
7 |           raw=message,
  |               ------- 
  |
